Update JVM-vmoption.md